crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__num_65_hyphen_bit_hex_numeric_entity.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"&#x10000000000000041;\"####)"
---
[
    Token {
        data: "�",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
