crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__permitted_slash_but_in_close_tag.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"</br/>\"####)"
---
[]
