crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__single_hyphen_quoted_attribute_value_not_followed_by_whitespace.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<foo a='b'c>\"####)"
---
[
    Token {
        data: "foo",
        attrs: Some(
            UniCaseBTreeMap {
                inner: {
                    "a": Some(
                        (
                            "b",
                            Single,
                        ),
                    ),
                    "c": None,
                },
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "foo",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
