crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__slash_eof_in_tag_name.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<z/\"####)"
---
[
    Token {
        data: "<z/",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "z",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
