crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__tag_attribute_name_case_edge_values.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<x@AZ[`az{ @AZ[`az{>\"####)"
---
[
    Token {
        data: "x@AZ[`az{",
        attrs: Some(
            UniCaseBTreeMap {
                inner: {
                    "@AZ[`az{": None,
                },
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "x@AZ[`az{",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
