crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__text_cr_cr_cr_text.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"text\n\n\ntext\"####)"
---
[
    Token {
        data: "text\n\n\ntext",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
